# Atverto-datu

./: .gitignore  README.md  STARTUP.md  package-lock.json  package.json
apps/frontend/: app.js  index.html  styles.css
geo_ingest/: .env.example  README.md  api.py  config.yaml  ingest.py  pyproject.toml  run_ingest.sh
geo_ingest/docs/: OPERATIONS.md
geo_ingest/open_data_geodb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
